# dev_azure_reporter

./: README.md  dev_azure_report.py  dev_azure_reporter.py  pyproject.toml  setup.py
.github/workflows/: wheels.yml
dev_azure_reporter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
