[tool.poetry]
name = "dev-azure-reporter"
version = "0.1.0"
description = "A tool for reporting from GitHub Actions / GitLab CI/CD to Azure DevOps"
authors = ["Aleksandr Bogomolov <aleksandr.bogomolov.ext@bayer.com>"]
readme = "README.md"
packages = [{include = "dev_azure_reporter"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
